jvm gc and mysql master/slave learn note